manifests/system/registry/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: registry
  namespace: registry
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: registry
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "5000"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
